tests/ui/traits/issue-87558.stderr
error[E0407]: method `from` is not a member of trait `Fn`
  --> $DIR/issue-87558.rs:8:5
   |
LL |     fn from() {}
   |     ^^^^^^^^^^^^ not a member of trait `Fn`

error[E0183]: manual implementations of `Fn` are experimental
  --> $DIR/issue-87558.rs:3:6
   |
LL | impl Fn(&isize) for Error {
   |      ^^^^^^^^^^ manual implementations of `Fn` are experimental
   |
   = help: add `#![feature(unboxed_closures)]` to the crate attributes to enable

error[E0229]: associated item constraints are not allowed here
  --> $DIR/issue-87558.rs:3:6
   |
LL | impl Fn(&isize) for Error {
   |      ^^^^^^^^^^ associated item constraint not allowed here
   |
help: parenthesized trait syntax expands to `Fn<(&isize,), Output=()>`
  --> $DIR/issue-87558.rs:3:6
   |
LL | impl Fn(&isize) for Error {
   |      ^^^^^^^^^^

error[E0046]: not all trait items implemented, missing: `call`
  --> $DIR/issue-87558.rs:3:1
   |
LL | impl Fn(&isize) for Error {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ missing `call` in implementation
   |
   = help: implement the missing item: `fn call(&self, _: (&isize,)) -> <Self as FnOnce<(&isize,)>>::Output { todo!() }`

error[E0277]: expected a `FnMut(&isize)` closure, found `Error`
  --> $DIR/issue-87558.rs:3:21
   |
LL | impl Fn(&isize) for Error {
   |                     ^^^^^ expected an `FnMut(&isize)` closure, found `Error`
   |
help: the trait `FnMut(&isize)` is not implemented for `Error`
  --> $DIR/issue-87558.rs:2:1
   |
LL | struct Error(ErrorKind);
   | ^^^^^^^^^^^^
help: item with same name found
  --> $SRC_DIR/std/src/thread/local.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/net/parser.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/os/unix/net/ancillary.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/convert.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/decode.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/process.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/slice/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/io/buffered/mod.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/env.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/alloc/layout.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/path.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/ffi/c_str.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/str/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/convert.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/dec2flt/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/poison.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpmc/error.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/path.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/time.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/char/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/time.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/num/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/array/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/mod.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/mpsc.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/btree/map.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/str/error.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/env.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/alloc/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/alloc/src/collections/btree/map/entry.rs:LL:COL
   = note: perhaps two different versions of crate `alloc` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   = note: perhaps two different versions of crate `core` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/fs.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/io/error.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
help: item with same name found
  --> $SRC_DIR/std/src/sync/poison.rs:LL:COL
   = note: perhaps two different versions of crate `std` are being used?
note: required by a bound in `Fn`
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0046, E0183, E0229, E0277, E0407.
For more information about an error, try `rustc --explain E0046`.
